axum-macros/tests/from_request/fail/parts_extracting_body.stderr
error[E0277]: the trait bound `String: FromRequestParts<_>` is not satisfied
 --> tests/from_request/fail/parts_extracting_body.rs:5:11
  |
5 |     body: String,
  |           ^^^^^^ the trait `FromRequestParts<_>` is not implemented for `String`
  |
  = note: Function argument is not a valid axum extractor.
          See `https://docs.rs/axum/0.8/axum/extract/index.html` for details
  = help: the following other types implement trait `FromRequestParts<S>`:
            `()` implements `FromRequestParts<S>`
            `(T1, T2)` implements `FromRequestParts<S>`
            `(T1, T2, T3)` implements `FromRequestParts<S>`
            `(T1, T2, T3, T4)` implements `FromRequestParts<S>`
            `(T1, T2, T3, T4, T5)` implements `FromRequestParts<S>`
            `(T1, T2, T3, T4, T5, T6)` implements `FromRequestParts<S>`
            `(T1, T2, T3, T4, T5, T6, T7)` implements `FromRequestParts<S>`
            `(T1, T2, T3, T4, T5, T6, T7, T8)` implements `FromRequestParts<S>`
          and $N others
